--- a/main/references.bib
+++ b/main/references.bib
@@ -17,7 +17,6 @@
     issue     = 1,
     language  = "english"
 }
-
 @article{PSWF-II_1961,
     author    = "Landau, Henry Jacob and Polack, Henry Otto",
     title     = "{Prolate Spherodial Wave Functions, Fourier Analysis and Uncertainty -- II}",
@@ -28,7 +27,6 @@
     issue     = "1",
     language  = "english"
 }
-
 @article{PSWF-III_1962,
     author    = "Landau, Henry Jacob and Polack, Henry Otto",
     title     = "{Prolate Spherodial Wave Functions, Fourier Analysis and Uncertainty -- III: The Dimensions of the Space of Essentially Time- and Band-Limited Signals}",
@@ -39,9 +37,8 @@
     issue     = "4",
     language  = "english"
 }
-
 @article{PSWF-IV_1964,
-    author    = "David, Slepian",
+    author    = "Slepian, David",
     title     = "{Prolate Spherodial Wave Functions, Fourier Analysis and Uncertainty -- IV: Extensions to Many Dimensions; Generalized Prolate Spheroidal Functions}",
     journal   = "The Bell System Technical Journal",
     year      = "1964",
@@ -50,10 +47,8 @@
     issue     = "6",
     language  = "english"
 }
-
-
 @article{PSWF-V_1978,
-    author    = "David, Slepian",
+    author    = "Slepian, David",
     title     = "{Prolate Spherodial Wave Functions, Fourier Analysis and Uncertainty -- V: The Discrete Case}",
     journal   = "The Bell System Technical Journal",
     year      = "1978",
@@ -71,6 +66,13 @@
     volume    = "3",
     issue     = "3",
     language  = "english"
+}  
+
+@misc{Martinsson,
+    author    = "Martinsson, B and Petersson, T and Ravanis, J and Renström, N and Torstensson, M",
+    title     = "Analys av frekvensers inverkan på hypertermibehandlingar",
+    note      = "BSc thesis, Chalmers University of Technology",
+    year      = "2016"
 }  
 
 
